--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@react-three/drei": "^9.121.4",
     "@react-three/fiber": "^8.17.14",
     "framer-motion": "^12.9.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "react": "^18.3.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.4.0",
     "react-slick": "^0.30.3",
     "recharts": "^2.15.3",
